      [other-window] #'transient--do-move)

- The region is now properly displayed, when using the mouse to
  select text in the menu buffer.  7c46a093

- The menu window can now be selected automatically when activating
  a menu, by setting the new option ~transient-select-menu-window~.
  Doing so is only encouraged for users of braille output devices.
  59380806

* v0.12.0    2026-01-01

- Fixed a regression when using the ~transient-value-preset~ class,
  introduced in v0.10.0.  f960acdf

- Stopped creating a new file to save an unmodified default value
  (the empty list).  3fdd8043

- Various makefile improvements. 4e6d3fc8..151622e1

- Gave up on determining function arity upfront.  6d1d8656

- Various build improvements.

* v0.11.0    2025-11-18

- At least Emacs 28.1 is required now.  Emacs 30.1 was released
  earlier this year, so we still support Emacs "oldoldstable".
  Because Emacs 28.1 was the first release that bundled this
  package, we have to keep support for that release.  d361d272

- Use my new Cond-Let package.  87fb8396..1d2710c7

- When Isearch was exited using a key that has no binding in
  ~isearch-mode-map~, then the Transient state was not resumed.
  82baa889

* v0.10.1    2025-10-06

- ~transient--get-savable-value~ now also functions properly when
  used while exiting the menu.  #410

* v0.10.0    2025-09-01

- Added more context-specific functions for getting the prefix's
  value and improved the documentation explaining when to use which
  function and why.  b4edb633 (See also the commit message.)

- When suffixes are being initialized, no longer drop inactive
  suffixes (inap suffixes and those on a level that is currently
  not being used).  If/when such a suffix later becomes active,
  it now uses its set or saved value; previously the default value
  would have been used.  #316, #364, #407

- The value and scope of inapt suffixes are now initialized when
  the prefix is being initialized, which is useful because they